--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,9 @@
         </div>
     </header>
 
+    <!-- Spacer to push footer to the bottom -->
+    <div class="spacer"></div>
+
     <!-- Footer -->
     <footer>
         <div class="footer-bottom">
