--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="styles.css">
-    <!-- Add Google Material Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <!-- Header -->
     <header>
         <h1>Dashboard</h1>
         <div class="settings">
@@ -18,28 +17,35 @@
             </a>
         </div>
     </header>
-
-    <!-- Spacer to push footer to the bottom -->
     <div class="spacer"></div>
-
-    <!-- Footer -->
     <footer>
         <div class="footer-bottom">
             <p>© 2023 My Website</p>
         </div>
     </footer>
     <script>
-        // Toggle the settings icon visibility on tap for mobile
+        // Function to check if the device is mobile (screen width <= 768px)
+        function isMobileDevice() {
+            return window.innerWidth <= 768;
+        }
+
+        // Toggle the settings icon visibility and handle auto-revert on mobile
         const header = document.querySelector('header');
         header.addEventListener('click', () => {
-            header.classList.toggle('toggled');
+            header.classList.add('toggled');
+            // On mobile, remove 'toggled' class after 2 seconds
+            if (isMobileDevice()) {
+                setTimeout(() => {
+                    header.classList.remove('toggled');
+                }, 2000);
+            }
         });
 
         // Load the saved theme on page load
         document.addEventListener('DOMContentLoaded', () => {
-            const savedTheme = localStorage.getItem('theme') || 'dark'; // Default to dark
+            const savedTheme = localStorage.getItem('theme') || 'dark';
             document.body.classList.add(`${savedTheme}-theme`);
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'92436cec1e17bd00',t:'MTc0MjYyMjc3My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9243a616bb2c6732',t:'MTc0MjYyNTExNC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
