--- a/Settings.html
+++ b/Settings.html
@@ -32,20 +32,17 @@
     <div class="spacer"></div>
     <footer>
         <div class="footer-bottom">
-            <p>© 2023 My Website</p>
+            <p>© 2025 Personal Manager</p>
         </div>
     </footer>
     <script>
-        // Function to check if the device is mobile (screen width <= 768px)
         function isMobileDevice() {
             return window.innerWidth <= 768;
         }
 
-        // Toggle the dashboard icon visibility and handle auto-revert on mobile
         const header = document.querySelector('header');
         header.addEventListener('click', () => {
             header.classList.add('toggled');
-            // On mobile, remove 'toggled' class after 2 seconds
             if (isMobileDevice()) {
                 setTimeout(() => {
                     header.classList.remove('toggled');
@@ -53,14 +50,12 @@
             }
         });
 
-        // Load the saved theme on page load
         document.addEventListener('DOMContentLoaded', () => {
             const savedTheme = localStorage.getItem('theme') || 'dark';
             document.body.classList.add(`${savedTheme}-theme`);
             document.getElementById('theme-select').value = savedTheme;
         });
 
-        // Change theme when the user selects a new option
         document.getElementById('theme-select').addEventListener('change', (e) => {
             const selectedTheme = e.target.value;
             document.body.classList.remove('light-theme', 'dark-theme');
