--- a/index.html
+++ b/index.html
@@ -17,23 +17,26 @@
             </a>
         </div>
     </header>
+    <main>
+        <section class="overview">
+            <h2>Overview</h2>
+            <p>Welcome to your Personal Manager dashboard. Here you can view key metrics, manage tasks, and customize your experience.</p>
+        </section>
+    </main>
     <div class="spacer"></div>
     <footer>
         <div class="footer-bottom">
-            <p>© 2023 My Website</p>
+            <p>© 2025 Personal Manager</p>
         </div>
     </footer>
     <script>
-        // Function to check if the device is mobile (screen width <= 768px)
         function isMobileDevice() {
             return window.innerWidth <= 768;
         }
 
-        // Toggle the settings icon visibility and handle auto-revert on mobile
         const header = document.querySelector('header');
         header.addEventListener('click', () => {
             header.classList.add('toggled');
-            // On mobile, remove 'toggled' class after 2 seconds
             if (isMobileDevice()) {
                 setTimeout(() => {
                     header.classList.remove('toggled');
@@ -41,7 +44,6 @@
             }
         });
 
-        // Load the saved theme on page load
         document.addEventListener('DOMContentLoaded', () => {
             const savedTheme = localStorage.getItem('theme') || 'dark';
             document.body.classList.add(`${savedTheme}-theme`);
